syntax = "proto3";

package pb;

option go_package="kope.io/auth/pkg/session/pb";

message SessionData {
    string provider_id = 1;
    string access_token = 2;
    int64 expires_on = 3;
    string refresh_token = 4;
    int64 timestamp = 5;

    // string kubernetes_uid = 6;
    string provider_email = 7;
}
